# CodeEditor

./: README.md  settings.gradle.kts
.github/workflows/: android_build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/itsvks/code/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: temp.kt
app/src/main/java/com/itsvks/code/: MainActivity.kt
app/src/main/java/com/itsvks/code/example/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/itsvks/code/: ExampleUnitTest.kt
editor/: build.gradle.kts
editor/src/androidTest/java/com/itsvks/code/: ExampleInstrumentedTest.kt
editor/src/main/java/com/itsvks/code/: CodeEditorState.kt
editor/src/main/java/com/itsvks/code/completion/: CompletionPopup.kt
editor/src/main/java/com/itsvks/code/component/: CodeEditor.kt  ScrollbarOverlay.kt
editor/src/main/java/com/itsvks/code/core/: CursorPosition.kt  Direction.kt  EditorSnapshot.kt  FoldableRanges.kt  LruCache.kt  NativeTextBuffer.kt  Rope.ext.kt  Rope.kt  StringBuilder.ext.kt  TextBuffer.ext.kt  TextBuffer.kt  TextPosition.kt  core.kt  font.kt
editor/src/main/java/com/itsvks/code/input/: CodeEditorTextInputNode.kt  EditorInputConnection.kt
editor/src/main/java/com/itsvks/code/language/: CppLanguage.kt  JavaLanguage.kt  JavaScriptLanguage.kt  KotlinLanguage.kt  Language.kt  LanguageRegistry.kt  PlainTextLanguage.kt  RustLanguage.kt  (+1 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/editor-native/: Cargo.toml
rust/editor-native/src/: lib.rs  native_text_buffer.rs
(+21 files in other folders)
