[package]
name = "editor-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
ropey = "1.6.1"
android_logger = "0.15"
log = "0.4.27"
# [target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.15"
